2006-02-25  Chris Taylor  <chris@icculus.org>

	* main/menu.c: complete removal of 7th option in Options menu,
	hopefully fixing bug #2514

	* main/gameseg.c: when breaking a light, allow segment light to
	change by more than F1_0

2006-02-24  Chris Taylor  <chris@icculus.org>

	* main/gauges.c: make sure the correct font is used (whoops)

	* main/newmenu.c: restore the old canvas after showing a menu,
	avoiding potential problems

2005-11-29  Chris Taylor  <chris@icculus.org>

	* main/titles.c: for Descent 1 briefings, look for briefings no
	further than NUM_D1_BRIEFING_SCREENS (fix bug #2270)

2005-11-07  Chris Taylor  <chris@icculus.org>

	* arch/ogl/ogl.c: make super transparent textures have alpha

2005-08-13  Chris Taylor  <chris@icculus.org>

	* main/gauges.c: draw all gauges properly when using the cockpit
	in d2x-gl, including the energy bars when empty

2005-08-07  Chris Taylor  <chris@icculus.org>

	* arch/ogl/ogl.c, main/game.c, main/gamerend.c:
	get the cockpit to show with d2x-gl (actually committed!)

2005-08-06  Chris Taylor  <chris@icculus.org>

	* main/automap.c: must_free_canvas isn't used when
	AUTOMAP_DIRECT_RENDER is defined (whoops)

	* main/inferno.c: print the command line help properly

	* arch/ogl/ogl.c, main/game.c, main/gamerend.c:
	get the cockpit to show with d2x-gl

2005-08-02  Chris Taylor  <chris@icculus.org>

	* 2d/bitblt.c, 2d/bitmap.c, 2d/pixel.c, 2d/rect.c, 2d/rle.c,
	3d/draw.c, 3d/instance.c, 3d/matrix.c, 3d/points.c, 3d/rod.c,
	3d/setup.c,
	include/3d.h, include/palette.h,
	main/automap.c, main/cntrlcen.c, main/credits.c, main/endlevel.c,
	main/escort.c, main/game.c, main/game.h, main/gamecntl.c,
	main/gamerend.c, main/gameseq.c, main/gauges.c, main/hud.c,
	main/kconfig.c, main/kmatrix.c, main/menu.c, main/newmenu.c,
	main/object.c, main/paging.c, main/piggy.c, main/scores.c,
	main/state.c, main/titles.c:
	remove DirectDraw use and Windows mouse stuff made redundant by SDL
	(lots of WINDOWS code).